# autoencoder-chiptune

./: .gitignore  README.md  pyproject.toml
data/: metadata.csv
data/numpy-mel-spectrograms/: 01. Title ~ Link to the Past.npy  02. Beginning of the Journey.npy  04. Time of the Falling Rain.npy  05. Time of the Falling Rain (Storm).npy  08. Princess Zelda's Rescue.npy  09. Safety in the Sanctuary.npy  10. Hyrule Field Main Theme.npy  12. Guessing-Game House.npy  13. Fortune Teller.npy  14. Soldiers of Kakariko Village.npy  15. Dank Dungeons.npy  16. Lost Ancient Ruins.npy  17. Anger of the Guardians.npy  18. Great Victory!.npy  19. The Silly Pink Rabbit!.npy  20. The Silly Pink Rabbit! (Storm).npy  21. Forest of Mystery.npy  22. Unsealing the Master Sword.npy  23. Priest of the Dark Order.npy  24. Dark Golden Land.npy  25. Black Mist.npy  26. Black Mist (Storm).npy  27. Dungeon of Shadows.npy  28. Meeting the Maidens.npy  29. The Goddess Appears.npy  30. Release of Ganon.npy  31. Ganon's Message.npy  32. The Prince of Darkness.npy  33. Power of the Gods.npy  36. Chest Appears.npy  37. Dimensional Shift.npy  38. Fierce Rainstorm.npy  39. Got a Key!.npy  40. Heart Container.npy  41. Heart Piece.npy  42. Howling Wind.npy  43. Ocarina Song (Short).npy  44. Ocarina Song.npy  45. Praying.npy  46. Quit Game.npy  (+4 more)
data/processed/: embeddings.json
data/soundscapes-mel-sgrams/: 04. Time of the Falling Rain.npy  (+9 more)
notebooks/: autoencoder.ipynb  convert_data_to_wav.ipynb  mel_spectrograms.ipynb  processing.ipynb  visualizing.ipynb
src/: dataset.py  models.py  objects.py
(+14 files in other folders)
