[tool.poetry]
name = "autoencoder-chiptune"
version = "0.1.0"
description = "Let's autoencoder some chiptune beats to see if we can plot them as a cool map."
authors = ["Mateus Assis <mateus.d.assis.silva@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src"}
] 

[tool.poetry.dependencies]
python = ">3.9,<3.12"
librosa = "^0.10.1"
ipykernel = "^6.26.0"
ipython = "^8.18.0"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
